plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.safealert'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.kafka:spring-kafka'

    runtimeOnly 'org.postgresql:postgresql'

    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    // Logstash
    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

bootRun {
    jvmArgs = [
        "-javaagent:${rootProject.projectDir}/../opentelemetry-javaagent.jar",
        "-Dotel.exporter.otlp.endpoint=${System.getenv('OTEL_EXPORTER_OTLP_ENDPOINT') ?: 'http://localhost:4318'}",
        "-Dotel.exporter.otlp.protocol=${System.getenv('OTEL_EXPORTER_OTLP_PROTOCOL') ?: 'http/protobuf'}",
        "-Dotel.service.name=subscription-service"
    ]
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading', '-Xshare:off'
}